<resources>
    <string name="app_name">ExplicitIntentApplication</string>
    <string name="hint_name">please enter your name</string>

    <string name="application2">Application2</string>
    <string name="application3">Application3</string>
    <string name="app_3_hint_text">please enter your surname</string>
    <string name="submit">Submit</string>
    <string name="cancel">CANCEL</string>
</resources>